prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_assignment_chain.nut
let x: int = 234
let y = x + 4
let z = 120 * y
let s: string = z
